--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>react-webpack-babel-sass-boilerplate</title>
+  <title>Infames Music App</title>
 </head>
 <body>
     <div id="app"></div>
